# lcd_i2c

./: CMakeLists.txt  LICENSE  README.md
cmake/: version.h.in
inc/: lcd_i2c.h
src/: lcd_i2c.c
